Changed naming of certian elements to be more specific, fixed td alignment issue

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: whitesmoke;
 }
 
-.spin-hidden-text {
+.ideas-hidden-text {
     display: none;
 }
 
@@ -20,7 +20,7 @@ body {
     animation-direction: normal;
 }
 
-.codespace-cat-img:hover + .spin-hidden-text {
+.codespace-cat-img:hover + .ideas-hidden-text {
     display: inline-block;
 }
 
@@ -53,20 +53,22 @@ body {
 .landing {
     font-size: 50px;
     animation: land 10s linear 2s 1 normal forwards;
+    position: absolute; /*I added this in order to better align the text inside the td elements*/
 }
 
+/* The translate applies to the original position of the animated element*/
 @keyframes land {
     0% { 
         transform: translate(0px, 0px);
     }
     20% {
-        transform: translate(300px, 150px);
+        transform: translate(300px, 100px);
     }
     50% {
-        transform: translate(600px, 150px);
+        transform: translate(600px, 100px);
     }
     100% {
-        transform: translate(0px, 150px);
+        transform: translate(0px, 100px);
     }
 }
 
@@ -83,6 +85,8 @@ body {
 
 .money-bag {
     margin-left: 20px;
+    position: relative; /*I added this in order to better align the text inside the td elements*/
+    z-index: 2;
 }
 
 /*Click the bag and money looks to fall for the sale*/
@@ -91,13 +95,27 @@ body {
     transform: translate(0px, 5px) rotateY(360deg);
 }
 
-.gavel {
+/*Increase the gavel size (reacts like text as it is unicode emoji), add the animation to make the gavel look like it it ending a auction*/
+.gavel-div {
     font-size: 50px;
     rotate: 180deg;
-    transition: transform 5s linear;
+    transition: transform 3s linear;
+    position: absolute; /*I added this in order to better align the text inside the td elements*/
+    width: 300px;
+    top: 550px;
+    z-index: 1;
 }
 
-.gavel-container:hover .gavel {
+.gavel-td:hover .gavel-div {
     transform: rotate(-180deg);
     font-size: 100px;
 }
+
+td {
+    width: 33%;
+    height: auto;
+    vertical-align: middle;
+}
+
+
+  
